[package]
name = "network-output"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Networking CLI for HTTP, WebSocket, TCP, UDP, DNS, Ping, WHOIS, MQTT, and SSE. Structured JSON output built for machines, readable by humans."
license = "Apache-2.0"
authors = ["Felipe Lima <felipefdl@network-output.com>"]
repository = "https://github.com/network-output/no"
homepage = "https://network-output.com"
readme = "README.md"
keywords = ["cli", "http", "json", "networking", "websocket"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github/", ".claude/", "justfile", "AGENTS.md", "npm/", "homebrew/", "scoop/"]

[[bin]]
name = "no"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
eventsource-stream = "0.2"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
rumqttc = "0.25.1"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4.3.0"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3"
indicatif = "0.17"
jaq-core = "2.2"
jaq-std = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }
humantime = "2"
hickory-resolver = "0.25"
surge-ping = "0.8"

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
rumqttd = "0.20"
tempfile = "3"

[profile.release]
lto = true
strip = true
